syntax = "proto3";

option go_package="./pb";

message SumRequest {
  int64 first_num = 1;
  int64 second_num = 2;
}

message Response {
  int64 num = 1;
}

message Request {
  int64 num = 1;
}


service MathService {
  rpc Sum(SumRequest) returns (Response);
  rpc Avg(stream Request) returns (Response);
  rpc PrimeDivisor(Request) returns (stream Response);
  rpc Max(stream Request) returns (stream Response);
}